--- a/hrmsproject/static/assets/css/style.css
+++ b/hrmsproject/static/assets/css/style.css
@@ -16000,12 +16000,15 @@ p {
 
 
     .calendar-container {
-      max-width: 900px;
+      width: 100%;
+      height: 100%;
       margin: auto;
       background: #fff;
       border-radius: 10px;
       box-shadow: 0 4px 20px rgba(0,0,0,0.05);
       overflow: hidden;
+      display: flex;
+      flex-direction: column;
     }
 
     .calendar-header {
@@ -16020,7 +16023,10 @@ p {
     .calendar-grid {
       display: grid;
       grid-template-columns: repeat(7, 1fr);
+      grid-auto-rows: 1fr;
       border-top: 1px solid #eee;
+      flex: 1;
+      min-height: 0;
     }
 
     .day-name {
@@ -16034,6 +16040,9 @@ p {
     border: 1px solid #e0e0e073;
     min-height: 42px;
     position: relative;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
 }
     .day .date {
       position: absolute;
